examples/test/testpolicy16548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16548
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key9: value22
      key20: value22
      key16: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value40
      podSelector:
        matchLabels:
          key41: value18
